# evernote2notion

./: .gitignore  README.md  pyproject.toml
src/import_evernote/: cli.py
