[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evernote2notion"
version = "0.1.0"
description = "Migrate Evernote HTML exports into a Notion database"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Koichi KAWAMURA", email = "koichikwmr@gmail.com" }]
keywords = ["evernote", "notion", "migration", "import", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "notion-client>=2.2.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/koichikawamura/evernote2notion"
Repository = "https://github.com/koichikawamura/evernote2notion.git"
Issues = "https://github.com/koichikawamura/evernote2notion/issues"

[project.scripts]
evernote2notion = "import_evernote.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/import_evernote"]
